# minimal_effort

./: README.md  mind  mind-config.sh
docker/: min_ros_entrypoint.sh
docker/gazebo/: gazeboserver.Dockerfile
docker/stewart/: stewart.Dockerfile
mind_scripts/: mind-completion.bash  mind-setup-dev-env.bash  mind-setup-docker-env.sh
modules/: docker-compose.stewart.yaml  docker-compose.vis_tools.yaml
src/samples/: README.md
src/stewart/bringup_stewart/: CMakeLists.txt  package.xml
src/stewart/bringup_stewart/launch/: stewart.launch.py
src/stewart/camera_driver/: CMakeLists.txt  package.xml
src/stewart/camera_driver/config/: params.yaml
src/stewart/camera_driver/include/: camera_driver_node.hpp
src/stewart/camera_driver/src/: camera_driver_node.cpp
src/stewart/control/: CMakeLists.txt  package.xml
src/stewart/control/include/: control_node.hpp
src/stewart/control/src/: control_node.cpp  test  test.cpp
src/stewart/cv_msgs/: CMakeLists.txt  package.xml
src/stewart/perception/: CMakeLists.txt  package.xml
src/stewart/perception/include/: perception_node.hpp
src/stewart/perception/src/: perception_node.cpp
src/stewart/planner/: CMakeLists.txt  package.xml
src/stewart/planner/config/: params.yaml
src/stewart/planner/include/: planner_node.hpp
src/stewart/planner/src/: planner_node.cpp
src/stewart/stewart_msgs/: CMakeLists.txt  package.xml
src/stewart/stewart_msgs/msg/: BallDetectionStamped.msg  HomographyStamped.msg
src/stewart/trajectory/: CMakeLists.txt  package.xml
src/stewart/trajectory/config/: params.yaml
src/stewart/trajectory/include/: trajectory_node.hpp
src/stewart/trajectory/src/: trajectory_node.cpp
